--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,3 @@
-<div class="navbar">
-    <ul>
-        <li>Inicio</li>
-        <li>Mi cuenta</li>
-        <li>Salir</li>
-    </ul>
+<div class="navbar container">
+    <p><b>Oficinas:</b><br> Buenos Aires: Florida 537. Piso 8° CABA. Bs. As.Tel.: 011-4105-2100 / 4131-5300<br> Rosario: Córdoba 1015 Piso 1° Of. 9. Rosario. Tel.: 0810-122-7337</p>
 </div>
