--- a/src/app/components/students/students.component.css
+++ b/src/app/components/students/students.component.css
@@ -4,6 +4,11 @@
     height: 400px;
 }
 
+.subtitle {
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+
 a {
     text-decoration: none;
     color: black;
