--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -1,5 +1,5 @@
 <div class="students">
-    <h3>Contenido Principal</h3>
+    <h3 class="subtitle">Los viajes más pedidos</h3>
     <div class="container">
         <div class="container">
             <div class="row">
