--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,4 +1,5 @@
 .toolbar {
-    background-color: #4285f4;
-    height: 30px;
+    background-color: #f0f0f0;
+    height: 70px;
+    margin-bottom: 50px;
 }
